--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Small Business - Start Bootstrap Template</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom styles for this template -->
-  <link href="css/small-business.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-<!-- Navigation -->
-
-<!-- Page Content -->
 <div class="container">
 
   <!-- Heading Row -->
@@ -34,7 +10,7 @@
     <div class="col-lg-4">
       <h1>Business Name or Tagline</h1>
       <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-      <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
+      <%= link_to 'Sign Up!', new_user_registration_path,class:'btn btn-primary btn-lg' %>
     </div>
     <!-- /.col-md-4 -->
   </div>
@@ -43,7 +19,7 @@
   <!-- Call to Action Well -->
   <div class="card text-white bg-secondary my-4 text-center">
     <div class="card-body">
-      <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>
+      <p class="text-white m-0"><strong>You Live Only Once! Make Sure You Spend 15 Hours On The Internet Daily, Seeking Validation From Strangers.</strong></p>
     </div>
   </div>
 
@@ -56,7 +32,7 @@
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">More Info</a>
+          <%= link_to 'Sign Up!', new_user_registration_path,class:'btn btn-primary' %>
         </div>
       </div>
     </div>
@@ -68,7 +44,7 @@
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">More Info</a>
+          <%= link_to 'Sign Up!', new_user_registration_path,class:'btn btn-primary' %>
         </div>
       </div>
     </div>
@@ -80,7 +56,7 @@
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">More Info</a>
+          <%= link_to 'Sign Up!', new_user_registration_path,class:'btn btn-primary' %>
         </div>
       </div>
     </div>
@@ -91,19 +67,3 @@
 
 </div>
 <!-- /.container -->
-
-<!-- Footer -->
-<footer class="py-5 bg-gradient-light">
-  <div class="container">
-    <p class="m-0 text-center text-black">Copyright &copy; Your Website 2017</p>
-  </div>
-  <!-- /.container -->
-</footer>
-
-<!-- Bootstrap core JavaScript -->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
-</html>
