--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,13 @@
       </div>
       <%= yield %>
 
+    <!-- Footer -->
+    <footer class="py-5 bg-gradient-light">
+      <div class="container">
+        <p class="m-0 text-center text-black">Copyright &copy; Your Website 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
     <%= render partial: 'layouts/partials/scripts' %>
   </body>
 </html>
